# sdks

./: .gitignore  PUBLISHING_GUIDE.md  fix-schemas.py  regenerate-all-sdks.sh  test-go-balance-simple.sh  test-go-balance.sh  test-go-sdk.sh  test-php-sdk.sh
docs/: RULE.MD  SDK_EDIT_ENDPOINT_TEST_RESULTS.md  SDK_FINAL_TEST_RESULTS.md  SDK_FULL_TEST_RESULTS.md  SDK_GENERATION_SUMMARY.md  SDK_TEST_RESULTS.md  SDK_TEXT_TO_IMAGE_AND_PAN_TEST_RESULTS.md
docs/mine/: file-management.md  overoll.md  response.md  test.md
openapi/: Midjourney api-unofficial by Legnext.ai.postman_collection.json  openapi-complete.yaml  openapi.json  openapi.yaml
sdks/csharp/: Org.OpenAPITools.sln
sdks/go/: README.md  api_account_management.go  api_image.go  api_video.go  client.go  configuration.go  go.mod  model__api_v1_diffusion_post_200_response.go  model__api_v1_diffusion_post_200_response_config.go  model__api_v1_diffusion_post_200_response_config_webhook_config.go  model__api_v1_diffusion_post_200_response_meta.go  model__api_v1_diffusion_post_200_response_meta_usage.go  model__api_v1_diffusion_post_200_response_output.go  model__api_v1_edit_post_200_response.go  model_balance_response.go  (+10 more)
sdks/rust/: Cargo.toml  README.md
sdks/rust/.openapi-generator/: FILES
sdks/rust/docs/: AccountManagementApi.md  ApiV1DiffusionPost200Response.md  ApiV1DiffusionPost200ResponseConfig.md  ApiV1DiffusionPost200ResponseConfigWebhookConfig.md  ApiV1DiffusionPost200ResponseMeta.md  ApiV1DiffusionPost200ResponseMetaUsage.md  ApiV1DiffusionPost200ResponseOutput.md  ApiV1EditPost200Response.md  ApiV1JobJobIdGet200Response.md  ApiV1JobJobIdGet200ResponseError.md  ApiV1JobJobIdGet200ResponseMeta.md  ApiV1JobJobIdGet200ResponseOutput.md  ApiV1JobJobIdGet200ResponseOutputAvailableActions.md  ApiV1PanPost200Response.md  BalanceResponse.md  BalanceResponseData.md  ImageApi.md  TaskResponse.md  VideoApi.md
sdks/rust/src/apis/: account_management_api.rs  configuration.rs  image_api.rs  mod.rs  video_api.rs
sdks/rust/src/models/: _api_v1_diffusion_post_200_response.rs  _api_v1_diffusion_post_200_response_config.rs  _api_v1_diffusion_post_200_response_config_webhook_config.rs  _api_v1_diffusion_post_200_response_meta.rs  _api_v1_diffusion_post_200_response_meta_usage.rs  _api_v1_diffusion_post_200_response_output.rs  _api_v1_edit_post_200_response.rs  _api_v1_job__job_id__get_200_response.rs  _api_v1_job__job_id__get_200_response_error.rs  _api_v1_job__job_id__get_200_response_meta.rs  _api_v1_job__job_id__get_200_response_output.rs  _api_v1_job__job_id__get_200_response_output_available_actions.rs  _api_v1_pan_post_200_response.rs  balance_response.rs  balance_response_data.rs  mod.rs  task_response.rs
(+400 files in other folders)
