[package]
name = "legnext-rust-sdk"
version = "1.0.0"
authors = ["Legnext AI <support@legnext.ai>"]
description = "Official Rust client for the Legnext.ai Midjourney API. Generate images, videos, and more with AI."
license = "MIT"
edition = "2021"
homepage = "https://legnext.ai"
repository = "https://github.com/legnext-ai/sdks"
documentation = "https://github.com/legnext-ai/sdks/tree/master/sdks/rust"
keywords = ["legnext", "midjourney", "ai", "image-generation", "api"]
categories = ["api-bindings"]
readme = "README.md"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = ["base64", "std", "macros"] }
serde_json = "^1.0"
serde_repr = "^0.1"
url = "^2.5"
reqwest = { version = "^0.12", default-features = false, features = ["json", "multipart"] }

[features]
default = ["native-tls"]
native-tls = ["reqwest/native-tls"]
rustls-tls = ["reqwest/rustls-tls"]
